# myDemoApp

./: .gitignore  app.py  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
config/: schema.yaml
src.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: demo_data.py
src/entity/: estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
